Squash last bugs before push

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -50,6 +50,7 @@ html {
   margin-right: 2px;
   margin-left: 2px;
   margin-bottom: 2px;
+  text-align: center;
 }
 
 .right-side {
